# SIHA

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_fpv.py  main_gui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: fpv.yaml  map.html
drone/: __init__.py  controller.py  geofence.py  gimbal.py  logger.py  mavlink_client.py  telemetry.py
gui/: __init__.py  main_window.py  map_widget.py  telemetry_widget.py  video_widget.py  workers.py
scripts/: train.py
tests/: test_camera.py  test_config.py  test_detection.py
utils/: __init__.py  config.py
vision/: __init__.py  attitude.py  camera.py  detection.py  hud.py  target_localizer.py  tracker.py  yolo_detector.py
