[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "siha-fpv"
version = "1.0.0"
description = "SIHA – AI Vision & FPV Ground Control Station"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["drone", "fpv", "uav", "mavlink", "yolo", "gcs", "computer-vision"]

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "pymavlink>=2.4.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
siha-fpv  = "main_fpv:main"
siha-gui  = "main_gui:main"
siha-train = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drone*", "vision*", "gui*", "utils*", "scripts*"]

# ── Ruff linter ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "F401"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── MyPy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
